--- a/index.html
+++ b/index.html
@@ -1,13 +1,178 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+<meta charset='utf-8'>
+<meta content='星野貴行,星野,貴行,慶應,SFC,青山敦研究室,機械学習,神経科学' name='keywords'>
+<meta content='星野貴行の個人ウェブページ' name='descrition'>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="style.css">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+<title>Takayuki Hoshino</title>
 </head>
 
 <body>
-    <h1>hoge</h1>
 
-    <p>FooBar</p>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#">Takayuki Hoshino</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="#">略歴</a>
+          <a class="nav-item nav-link" href="#">国際会議</a>
+          <a class="nav-item nav-link" href="#">国内会議</a>
+          <a class="nav-item nav-link" href="#">受賞</a>
+          <a class="nav-item nav-link" href="#">職歴</a>
+          <a class="nav-item nav-link" href="#">教歴</a>
+          <a class="nav-item nav-link" href="#">スポーツ</a>
+        </div>
+      </div>
+    </nav>
+</header>
+
+
+<div class="container" style="padding-top:100px">
+
+    <div class="row">
+        <div class="col-md-3">
+            <img src="./img/pic.png" class="rounded-circle mx-auto d-block" style="width:200px">
+        </div>
+        <div class="col-md-6">
+            <h2 style="padding-top:30px">Takayuki Hoshino</h2>
+            <p>Takayuki Hoshino is a master's course graduate student.</p>
+            <ul>
+                <li>Email: starfy{at}sfc.keio.ac.jp</li>
+                <li>Interests: NeuroScience and MachineLearning</li>
+                <li>Language: Python, Matlab, R</li>
+            </ul>
+        </div>
+    </div>
+
+    <div style="border-bottom:#e74c3c solid 2px;">
+        <h2 style="padding-top:30px">Education</h2>
+        <table class="table">
+            <tr>
+                <td>2015.03</td><td>B.S. Faculty of Environment and Information Studies, Keio University</td>
+            </tr>
+            <tr>
+                <td>2017.03</td><td>M.S. Student, Graduate School of Media and Governance, Keio University</td>
+            </tr>
+        </table>
+    </div>
+
+    <div style="border-bottom:#e74c3c solid 2px;">
+        <h2 style="padding-top:30px">International Conference (refereed)</h2>
+        <ol>
+            <li><span class="underline">○Takayuki Hoshino</span> and Atsushi Aoyama, <span class="boldfont">“Estimation of MEG sensor signals on bad channels using a supervised algorithm“</span>, International Conference on Biomagnetism (BIOMAG), Philadelphia, USA, August 26-30, 2018.</li>
+            <li><span class="underline">○Takayuki Hoshino</span>, Suguru Kanoga, Atsunori Kanemura, and Takeshi Ogawa, <span class="boldfont">“Dictionary learning of fNIRS signals to examine scalp blood flow“</span>, Organization for Human Brain Mapping (OHBM), Singapore, June 17-21, 2018.</li>
+            <li><span class="underline">○Takayuki Hoshino</span>, Suguru Kanoga, Atsunori Kanemura, and Takeshi Ogawa, <span class="boldfont">“Selecting artifactual independent components from fNIRS based on decoding analysis“</span>, Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC), Honolulu, USA, July 17-21, 2018.</li>
+        </ol>
+
+    </div>
+
+    <div style="border-bottom:#e74c3c solid 2px;">
+        <h2 style="padding-top:30px">Domestic Conferences</h2>
+        <ol>
+            <li><span class="underline">○星野貴行</span>, 兼村厚範, 小川剛史, <span class="boldfont">“近赤外分光画像法で計測された脳活動の時空間解析”</span>, 情報論的学習理論ワークショップ(IBIS), 京都, 2016年11月.</li>
+            <li>○野沢健人, <span class="underline">星野貴行</span>, 福田拓也, 兼村厚範, <span class="boldfont">“脳波データへの深層学習の適用”</span>, 情報論的学習理論ワークショップ(IBIS), 京都, 2016年11月.</li>
+        </ol>
+    </div>
+
+    <div style="border-bottom:#e74c3c solid 2px;">
+        <h2 style="padding-top:30px">Awards</h2>
+        <ol>
+            <li>優秀卒業プロジェクト, 慶應義塾大学</li>
+            <li>3rd Prise, 新規事業立案プロジェクト (コニカミノルタ)</li>
+            <li>奨励賞, Sports Analytics Japan 2015 (SAJ2015)</li>
+        </ol>
+    </div>
+
+    <div style="border-bottom:#e74c3c solid 2px;">
+        <h2 style="padding-top:30px">Work Experience</h2>
+        <table class="table">
+            <tr>
+                <td>2017 June</td><td>Present</td><td>Research Assistant</td><td>AIST AIRC</td>
+            </tr>
+            <tr>
+                <td>2016 February</td><td>2017 May</td><td>Technical Staff</td><td>AIST AIRC</td>
+            </tr>
+            <tr>
+                <td>2016 July</td><td>2016 Auguest</td><td>Part Time Data Analyst</td><td>JAPAN SPORT COUNCIL</td>
+            </tr>
+            <tr>
+                <td>2016 March</td><td>Present</td><td>Temporary worker</td><td>Keio University</td>
+            </tr>
+            <tr>
+                <td>2016 February</td><td>2016 March</td><td>Paid Intern</td><td>RECRUIT</td>
+            </tr>
+        </table>
+    </div>
+
+    <div style="border-bottom:#e74c3c solid 2px;">
+        <h2 style="padding-top:30px">Teaching Experience</h2>
+        <h5>Teaching Assistant</h5>
+        <table class="table">
+            <tr>
+                <td>2018</td><td>Spring</td><td>DIFFERENTIAL CALCULUS</td>
+            </tr>
+            <tr>
+                <td>2017</td><td>Autumn</td><td>DIFFERENTIAL CALCULUS</td><td></td>
+            </tr>
+            <tr>
+                <td>2017</td><td>Autumn</td><td>Ｗｅｂテキスト処理法</td><td></td>
+            </tr>
+            <tr>
+                <td>2017</td><td>Spring</td><td>DIFFERENTIAL CALCULUS</td><td></td>
+            </tr>
+            <tr>
+                <td>2017</td><td>Spring</td><td>プログラミング入門Ⅱ</td><td></td>
+            </tr>
+        </table>
+
+        <h5>Student Assistant</h5>
+        <table class="table">
+            <tr>
+                <td>2016</td><td>Spring</td><td>知識処理論</td><td></td>
+            </tr>
+            <tr>
+                <td>2014</td><td>Spring</td><td>プログラミング入門Ⅱ</td><td>2 classes</td>
+            </tr>
+            <tr>
+                <td>2013</td><td>Autumn</td><td>論理思考とプログラミング</td><td>2 classes</td>
+            </tr>
+            <tr>
+                <td>2013</td><td>Spring</td><td>情報基礎</td><td>2 classes</td>
+            </tr>
+        </table>
+    </div>
+
+    <div>
+        <h2 style="padding-top:30px">Sports</h2>
+        <ol>
+            <li>1st Prise, Fencing Sable, All Japan U-15 Tournament, 2007</li>
+            <li>2st Prise, Fencing Sable, All Japan U-15 Tournament, 2008</li>
+            <li>4st Prise, Fencing Sable, All Japan Cadet Tournament, 2009</li>
+            <li>4st Prise, Fencing Sable, All Japan Cadet Tournament, 2009</li>
+            <li>4st Prise, Fencing Sable, All National University Tournament (
+Open participation), 2014</li>
+            <li>5st Prise, Fencing Foil, All National University Tournament (
+Open participation), 2014</li>
+        </ol>
+    </div>
+
+</div>
+
+<footer class="footer" style="margin-top:100px">
+    <div class="container">
+        <p></p>
+    </div>
+</footer>
+
 </body>
 
 </html>
