--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#">Takayuki Hoshino</a>
+      <a class="navbar-brand" href="#">Takayuki Hoshino (星野 貴行)</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,7 +26,7 @@
           <a class="nav-item nav-link" href="#">略歴</a>
           <a class="nav-item nav-link" href="#">国際会議</a>
           <a class="nav-item nav-link" href="#">国内会議</a>
-          <a class="nav-item nav-link" href="#">受賞</a>
+          <a class="nav-item nav-link" href="#">受賞&フェローシップ</a>
           <a class="nav-item nav-link" href="#">職歴</a>
           <a class="nav-item nav-link" href="#">教歴</a>
           <a class="nav-item nav-link" href="#">スポーツ</a>
@@ -68,6 +68,7 @@
     <div style="border-bottom:#e74c3c solid 2px;">
         <h2 style="padding-top:30px">International Conference (refereed)</h2>
         <ol>
+            <li><span class="underline">○Takayuki Hoshino</span>, Suguru Kanoga, Atsunori Kanemura, and Takeshi Ogawa, <span class="boldfont">“A No-Reference Metric of Cerebral Blood Flow Extraction for fNIRS Data“</span>, IEEE International Conference on Systems, Man, and Cybernetics (SMC), Miyazaki, Japan, October 7-10, 2018.</li>
             <li><span class="underline">○Takayuki Hoshino</span> and Atsushi Aoyama, <span class="boldfont">“Estimation of MEG sensor signals on bad channels using a supervised algorithm“</span>, International Conference on Biomagnetism (BIOMAG), Philadelphia, USA, August 26-30, 2018.</li>
             <li><span class="underline">○Takayuki Hoshino</span>, Suguru Kanoga, Atsunori Kanemura, and Takeshi Ogawa, <span class="boldfont">“Dictionary learning of fNIRS signals to examine scalp blood flow“</span>, Organization for Human Brain Mapping (OHBM), Singapore, June 17-21, 2018.</li>
             <li><span class="underline">○Takayuki Hoshino</span>, Suguru Kanoga, Atsunori Kanemura, and Takeshi Ogawa, <span class="boldfont">“Selecting artifactual independent components from fNIRS based on decoding analysis“</span>, Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC), Honolulu, USA, July 17-21, 2018.</li>
@@ -84,11 +85,13 @@
     </div>
 
     <div style="border-bottom:#e74c3c solid 2px;">
-        <h2 style="padding-top:30px">Awards</h2>
+        <h2 style="padding-top:30px">Awards & Fellowship</h2>
         <ol>
-            <li>優秀卒業プロジェクト, 慶應義塾大学</li>
-            <li>3rd Prise, 新規事業立案プロジェクト (コニカミノルタ)</li>
-            <li>奨励賞, Sports Analytics Japan 2015 (SAJ2015)</li>
+            <li>2018, 森泰吉郎記念研究振興基金, 慶應義塾大学</li>
+            <li>2018, 3rd Prise, 新規事業立案プロジェクト, コニカミノルタ</li>
+            <li>2017, 研究のすゝめ奨学金, 慶應義塾大学</li>
+            <li>2017, 優秀卒業プロジェクト, 慶應義塾大学</li>
+            <li>2015, 奨励賞, Sports Analytics Japan 2015 (SAJ2015)</li>
         </ol>
     </div>
 
