--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <img src="./img/pic.png" class="rounded-circle mx-auto d-block" style="width:200px">
         </div>
         <div class="col-md-6">
-            <h2 style="padding-top:30px">Takayuki Hoshino</h2>
+            <h2 style="padding-top:30px">Takayuki Hoshino (星野 貴行)</h2>
             <p>Takayuki Hoshino is a master's course graduate student.</p>
             <ul>
                 <li>Email: starfy{at}sfc.keio.ac.jp</li>
-                <li>Interests: NeuroScience and MachineLearning</li>
+                <li>Interests: NeuroEngineering and MachineLearning</li>
                 <li>Language: Python, Matlab, R</li>
             </ul>
         </div>
