TAの情報をアップデート

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div style="border-bottom:#e74c3c solid 2px;">
-        <h2 style="padding-top:30px">Awards & Fellowship</h2>
+        <h2 style="padding-top:30px">Awards & Grants</h2>
         <ol>
             <li>2018, 森泰吉郎記念研究振興基金, 慶應義塾大学</li>
             <li>2018, 3rd Prise, 新規事業立案プロジェクト, コニカミノルタ</li>
@@ -120,6 +120,12 @@
         <h2 style="padding-top:30px">Teaching Experience</h2>
         <h5>Teaching Assistant</h5>
         <table class="table">
+            <tr>
+                <td>2018</td><td>Autumn</td><td>NEURAL INFORMATION SCIENCE</td>
+            </tr>
+            <tr>
+                <td>2018</td><td>Autumn</td><td>DIFFERENTIAL CALCULUS</td>
+            </tr>
             <tr>
                 <td>2018</td><td>Spring</td><td>DIFFERENTIAL CALCULUS</td>
             </tr>
